# memoraxx

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  config.json  e2e.sh  main.cpp  memory.json  mkdocs.yml
.devcontainer/: devcontainer.json
.github/workflows/: c-cpp.yml  ci.yml
doc/: API.md  ARCHITECTURE.md  DOCKER.md  EXAMPLES.md  README.md
scripts/: commit-msg  rewrite_msg.py  rewrite_msg.sh
src/: main.cpp
